# seeky

./: .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  NOTICE  PNPM.md  README.md  cliff.toml  commitlint.config.js  flake.nix  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: dotslash-config.json
.github/ISSUE_TEMPLATE/: 2-bug-report.yml  3-docs-issue.yml
.github/workflows/: ci.yml  cla.yml  rust-ci.yml  rust-release.yml
.husky/: commit-msg  pre-commit  pre-push
docs/: CLA.md
seeky-cli/: .gitignore  build.mjs  default.nix  package.json
seeky-cli/examples/: README.md  prompting_guide.md
seeky-cli/scripts/: build_container.sh  init_firewall.sh  install_native_deps.sh  stage_release.sh
seeky-cli/src/: cli.tsx
seeky-cli/tests/: agent-project-doc.test.ts  clear-command.test.tsx  config.test.tsx  disableResponseStorage.agentLoop.test.ts  disableResponseStorage.test.ts  model-utils-network-error.test.ts  multiline-ctrl-enter-submit.test.tsx  multiline-shift-enter-crlf.test.tsx  terminal-chat-response-item.test.tsx
seeky-rs/: README.md  default.nix  justfile  rustfmt.toml
seeky-rs/ansi-escape/: Cargo.toml  README.md
seeky-rs/apply-patch/: Cargo.toml
seeky-rs/cli/: Cargo.toml
seeky-rs/cli/src/: debug_sandbox.rs  landlock.rs  lib.rs  main.rs  proto.rs  seatbelt.rs
seeky-rs/cli/src/linux-sandbox/: main.rs
seeky-rs/common/: Cargo.toml  README.md
seeky-rs/core/: Cargo.toml  README.md
seeky-rs/docs/: protocol_v1.md
seeky-rs/exec/: Cargo.toml
seeky-rs/execpolicy/: Cargo.toml  README.md
seeky-rs/linux-sandbox/: Cargo.toml  README.md
(+84 files in other folders)
