[package]
name = "seeky-cli"
version = { workspace = true }
edition = "2024"

[[bin]]
name = "seeky"
path = "src/main.rs"

[lib]
name = "seeky_cli"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
seeky-core = { path = "../core" }
seeky-common = { path = "../common", features = ["cli"] }
seeky-exec = { path = "../exec" }
seeky-linux-sandbox = { path = "../linux-sandbox" }
seeky-mcp-server = { path = "../mcp-server" }
seeky-tui = { path = "../tui" }
serde_json = "1"
tokio = { version = "1", features = [
    "io-std",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
